<resources>
    <string name="app_name">Quiz Game</string>
    <string name="quiz_splash_image_view_content_description">Quiz Game</string>
    <string name="login_image_view_content_description">Quiz Game Login</string>
    <string name="text_input_edit_text_email_hint">Email</string>
    <string name="text_input_edit_text_password_hint">Password</string>
    <string name="login_sign_in_button_text">Sign In</string>
    <string name="login_or_text_view_text">OR</string>
    <string name="login_sign_up_text_view_text">Don\'t have an account yet? <font color="#FF0000CC"><b><u><i>Sign Up</i></u></b></font></string>
    <string name="login_forgot_password_text_view_text"><u>I forgot my password</u></string>
    <string name="sign_up_image_view_content_description">Sign Up</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="account_creation_successful_text">Your account has been created</string>
    <string name="account_creation_failure_text">Your account was not created. Please try again later</string>
    <string name="login_successful_text">Welcome to Quiz Game</string>
    <string name="login_failure_text">Unable to login. Please try again later</string>
    <string name="main_activity_sign_out_button_text">Sign Out</string>
    <string name="forgot_password_image_view">Forgot Password</string>
    <string name="reset_button_text">Reset My Password</string>
    <string name="forgot_password_email_sent_successfully">We sent a password reset mail to your email address</string>
    <string name="forgot_password_email_send_failure_text">Unable to reset password. Please try again later</string>
    <string name="google_sign_in_button_text">Continue with Google</string>
    <string name="start_quiz_button_text">Start Quiz</string>
    <string name="main_quiz_image_view_content_description">Quiz Games</string>
    <string name="sign_out_successful_text">Sign out was successful</string>
    <string name="time_label_text">Time:</string>
    <string name="text_view_time_default_value">60</string>
    <string name="correct_answers_label_text">Correct Answers:</string>
    <string name="text_view_correct_answers_default_value">0</string>
    <string name="wrong_answers_label_text">Wrong Answers:</string>
    <string name="text_view_wrong_answers_default_value">0</string>
    <string name="text_view_question_default_value">Question</string>
    <string name="text_view_answer_1_default_value">Answer 1</string>
    <string name="text_view_answer_2_default_value">Answer 2</string>
    <string name="text_view_answer_3_default_value">Answer 3</string>
    <string name="text_view_answer_4_default_value">Answer 4</string>
    <string name="button_finish_text">Finish</string>
    <string name="button_next_text">Next</string>
    <string name="database_question_retrieval_error_text">Unable to retrieve questions. Please try again later</string>
    <string name="quiz_completed_text">Congratulations!<br />You have answered all questions. Do you want to see the result or play again?</string>
    <string name="time_up_text">Sorry, time is up. Please continue with the next question</string>
    <string name="score_send_to_database_successful_text">Scores sent to database successfully</string>
    <string name="see_result_button_text">See Result</string>
    <string name="play_again_button_text">Play Again</string>
    <string name="congratulations_image_view_content_description">Congratulations</string>
    <string name="exit_button_text">Exit</string>
    <string name="database_scores_retrieval_error_text">Unable to retrieve scores. Please try again later</string>
</resources>