<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".QuizActivity">

    <LinearLayout
        android:id="@+id/statisticsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_label_text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_time_default_value"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/correct_answers_label_text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewCorrectAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_correct_answers_default_value"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wrong_answers_label_text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewWrongAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_wrong_answers_default_value"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameAreaLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/buttonLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/text_view_question_default_value"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewAnswer1"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/text_view_answer_1_default_value"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewAnswer2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/text_view_answer_2_default_value"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewAnswer3"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/text_view_answer_3_default_value"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewAnswer4"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/text_view_answer_4_default_value"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonFinish"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/button_finish_text"
            android:textColor="@color/orange"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/button_next_text"
            android:textColor="@color/orange"
            android:textSize="20sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarQuiz"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>