<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".ResultActivity">

    <ImageView
        android:id="@+id/congratulationsImageView"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/congratulations_image_view_content_description"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/congratulations_image" />

    <TextView
        android:id="@+id/textViewCorrectLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/correct_answers_label_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewCorrectAnswersLabel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratulationsImageView" />

    <TextView
        android:id="@+id/textViewCorrectAnswersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/text_view_correct_answers_default_value"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewCorrectLabel"
        app:layout_constraintTop_toBottomOf="@+id/congratulationsImageView" />

    <TextView
        android:id="@+id/textViewWrongLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/wrong_answers_label_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewWrongAnswersLabel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCorrectLabel" />

    <TextView
        android:id="@+id/textViewWrongAnswersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_view_wrong_answers_default_value"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewWrongLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewCorrectAnswersLabel" />

    <Button
        android:id="@+id/buttonPlayAgain"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/white"
        android:text="@string/play_again_button_text"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonExit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/white"
        android:text="@string/exit_button_text"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlayAgain" />
</androidx.constraintlayout.widget.ConstraintLayout>