<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginQuizImageView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:contentDescription="@string/login_image_view_content_description"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_login_quiz_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/login_shape"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginQuizImageView">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/icon_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_input_edit_text_email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/icon_padlock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_input_edit_text_password_hint"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/login_sign_in_button_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/login_or_text_view_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black" />
        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/login_sign_up_text_view_text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_forgot_password_text_view_text"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>