<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainQuizImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/main_quiz_image_view_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_login_quiz_image" />

    <Button
        android:id="@+id/buttonStartQuiz"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/start_quiz_button_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainQuizImageView" />

    <Button
        android:id="@+id/buttonSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:text="@string/main_activity_sign_out_button_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>