<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/signUpImageView"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/sign_up_image_view_content_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sign_up_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpImageView"
        app:startIconDrawable="@drawable/icon_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_edit_text_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/black"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
        app:startIconDrawable="@drawable/icon_padlock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_edit_text_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/orange"
        android:text="@string/sign_up_button_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword" />

    <ProgressBar
        android:id="@+id/progressBarSignUp"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSignUp" />
</androidx.constraintlayout.widget.ConstraintLayout>